# Onboard-SDK

./: CMakeLists.txt  run_build.sh
build.bak/: UserConfig.txt
osdk-core/modules/src/mop/: dji_mop_server.cpp
sample/platform/STM32/OnBoardSDK_STM32/User/: CameraManagerSample.cpp
sample/platform/linux/advanced-sensing/camera_stream_target_tracking_sample/: CMakeLists.txt  YoloObjectDetector.hpp  communicator.cpp  communicator.hpp  main-ddx.cpp  main-merge.cpp  main.cpp  mop_protocol.hpp  planning.cpp  planning.hpp
sample/platform/linux/advanced-sensing/camera_stream_target_tracking_sample copy/: CMakeLists.txt  YoloObjectDetector.cpp  main.cpp  target_tracking.cpp  tracking_utility.cpp
sample/platform/linux/advanced-sensing/camera_stream_target_tracking_sample.bak/: tracking_utility.cpp
sample/platform/linux/advanced-sensing/camera_stream_target_tracking_sample/New/: communicator.cpp  communicator.hpp
sample/platform/linux/advanced-sensing/camera_stream_target_tracking_sample/streamer/: streamer.cpp  streamer.hpp
sample/platform/linux/mobile/: mobile_sample.cpp
sample/platform/linux/mop/: op_download_sample.cpp
sample/platform/linux/payloads/: main_sync.cpp
